[package]
name = "rbp_core"
description = "Rust Budget Planner - a beginners hubby project - core lib"
version = "0.1.0"
authors = ["Andreas Stensig <stensig04@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/denDAY04/rust-budget-planner-core"
readme = "README.md"
keywords = ["beginner", "budget"]
categories = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
